--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
   "author": "Michaël Villeneuve",
   "license": "MIT",
   "peerDependencies": {
-    "react-native": "0.49.3"
+    "react-native": "^0.49.3"
   },
   "dependencies": {
-    "react": "16.0.0-beta.5"
+    "react": "^16.0.0-beta.5"
   }
 }
